🎨 fix color contrast on code blocks

--- a/css/app.css
+++ b/css/app.css
@@ -19,12 +19,23 @@ html {
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
+html,
+body {
+  width: 100vw;
+  height: 100vh;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+}
+
 .editor {
   position: relative;
   display: flex;
   flex-direction: row;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
 
@@ -82,6 +93,7 @@ html {
 }
 
 .editor__markdown {
+  position: relative;
   padding-bottom: calc(50px + 3rem);
   font-size: 1rem;
   line-height: 1.75;
